cloudformation/cloudformation-vpc.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Template to create a vpc with a webserver
Resources: 
  webServerVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
  webServerPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: webServerVpc
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: "us-west-2a"
  myInternetGateway:
    Type: AWS::EC2::InternetGateway
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: webServerVpc
      InternetGatewayId:
        Ref: myInternetGateway
  publicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: webServerVpc
  routeToIgw:
    Type: AWS::EC2::Route
    DependsOn: myInternetGateway
    Properties:
       RouteTableId:
         Ref: publicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: myInternetGateway
  webServerPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: webServerPublicSubnet
      RouteTableId:
        Ref: publicRouteTable
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow web server to communicate over http
        VpcId:
          Ref: webServerVpc
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
  WebServerInstance: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-0341aeea105412b57
      InstanceType: t2.micro
      NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet: 
            - Ref: WebServerSecurityGroup
          SubnetId: 
            Ref: webServerPublicSubnet
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            # Install Apache Web Server and PHP
            yum install -y httpd mysql php
            # Download Lab files
            wget https://aws-tc-largeobjects.s3.amazonaws.com/ILT-TF-100-TUFOUN-1/4-lab-vpc-web-server/lab-app.zip
            unzip lab-app.zip -d /var/www/html/
            # Turn on web server
            chkconfig httpd on
            service httpd start
